--- a/extractproject/index.html
+++ b/extractproject/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml">
+<!--<html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml">-->
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <title>Feature point extract</title>
