特征点提取

--- a/extractproject/index.html
+++ b/extractproject/index.html
@@ -48,7 +48,7 @@
 				<div id="collapseOne" class="panel-collapse collapse in">
 						<div class="panel-body">
                             <div class="col-lg-4 col-md-4">
-                                    <div class="form-group">
+                                    <div class="form-group" style="width: 275px">
                                         <input type='radio' name="radio" value="radio1" checked="checked" style="position:absolute">
                                         <label for="exampleInputEmail1" style="padding-left: 17px;">设置网格数：</label>
                                         <select style="width:100px;height:30px;">
